--- a/conf/yandex.yaml
+++ b/conf/yandex.yaml
@@ -16,7 +16,10 @@ yandex_smart_home:
       - switch.0x00158d0002f9b1e5_switch_right # санузел—д-вентиляция
       - switch.0x00158d0002f9b17b_switch_left # спальня-основной свет
       - switch.0x00158d0002f9b17b_switch_right # спальня-группа у окна
+      - light.liustra_v_detskoi
+      - light.verkhniaia_podsvetka
       - input_boolean.night_mode
+      - vacuum.xiaomi_vacuum_cleaner
       - media_player.lg_webos_smart_tv
   entity_config:
     input_boolean.night_mode:
